# cryptopals-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs  set1.rs  set2.rs
src/bytes/: aes.rs  mod.rs  padding.rs  xor.rs
src/text/: english.rs  mod.rs
