[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base64 = "0.20.0"
color-eyre = "0.6.2"
float-ord = "0.3.2"
indexmap = "1.9.2"
itertools = "0.10.5"
once_cell = "1.17.0"
plotlib = "0.5.1"
rand = "0.8.5"
statest = "0.2.2"

[dev-dependencies]
arbitrary = "1.2.2"
proptest = "1.0.0"
